--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-masonry-css": "^1.0.16",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
